Always <a> elements for nav items, even if they have no href. Don't populate More menu when it is a control for a mega-dropdown. Better detection of click outside of nav (for collapsing all). Correct sizing of mega-dropdown.

--- a/src/scss/mega-dropdown.scss
+++ b/src/scss/mega-dropdown.scss
@@ -1,4 +1,5 @@
 .o-ft-header__mega-dropdown {
+  box-sizing: border-box;
   position: absolute;
   top: 55px;
   right: 0;
