--- a/src/scss/nav-theme.scss
+++ b/src/scss/nav-theme.scss
@@ -32,14 +32,12 @@
   a {
     padding: 0 20px 0 0;
   }
-  [aria-controls],
+  [aria-controls] > a,
   .nav--parent > a {
-    padding-right: 20px;
     background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAECAYAAACzzX7wAAAAPElEQVQImW3JMQ0AMAgEwNeEG2zggxk7bwMf7HRoaNK0tx5EpKuqf1S1AQBm9qS77xwRcZLknYNkZ+aVCyxsRRbyyW4mAAAAAElFTkSuQmCC') no-repeat 91% center;
   }
   [data-nav-level='1'] {
     & > li {
-      &[aria-controls],
       & > a {
         text-transform: uppercase;
         line-height: 55px;
@@ -59,7 +57,6 @@
   a {
     padding: 0 20px 0 0;
   }
-  [aria-controls],
   .nav--parent > a {
     padding-right: 20px;
     background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAECAYAAACzzX7wAAAAPElEQVQImW3JMQ0AMAgEwNeEG2zggxk7bwMf7HRoaNK0tx5EpKuqf1S1AQBm9qS77xwRcZLknYNkZ+aVCyxsRRbyyW4mAAAAAElFTkSuQmCC') no-repeat 91% center;
